# IcefallDB

./: .gitignore  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  about.hbs  about.toml
crates/datafusion-encrypted-parquet/: Cargo.toml
crates/datafusion-encrypted-parquet/src/: factory.rs  keys.rs  lib.rs  stub.rs
crates/icefalldb-cli/: Cargo.toml
crates/icefalldb-cli/src/: client.rs  encryption.rs  main.rs
crates/icefalldb-cli/tests/: cli_result_cache.rs  cli_tests.rs  cross_process_insert_tests.rs  encryption_cli.rs  missing_table_tests.rs  snapshots_cli.rs  time_travel_cli.rs
crates/icefalldb-core/: Cargo.toml
crates/icefalldb-core/benches/: benchmarks.rs
crates/icefalldb-core/examples/: bench_locate.rs  retract_crossover.rs
crates/icefalldb-core/src/: agg_cache.rs  catalog.rs  check.rs  commit_delta.rs  compaction.rs  database_catalog.rs  deletion.rs  doctor.rs  error.rs  gc.rs  index.rs  lib.rs  meta_cache.rs  mutation_wal.rs  reader.rs  recovery.rs  rowid.rs  schema_util.rs  tsv.rs  wal.rs  writer.rs
crates/icefalldb-core/src/encryption/: aad.rs  config.rs  keys.rs  mod.rs  properties.rs  provider.rs
crates/icefalldb-core/src/iceberg/: data_file.rs  export.rs  manifest.rs  manifest_list.rs  metadata.rs  mod.rs  partition_spec.rs  schema.rs  sort_order.rs
crates/icefalldb-core/src/index/: binary.rs
crates/icefalldb-core/src/metadata/: checkpoint.rs  checksum.rs  manifest.rs  mod.rs  row_group_meta.rs  schema.rs
crates/icefalldb-core/src/rowindex/: mod.rs  reader.rs  writer.rs
crates/icefalldb-core/src/storage/: local.rs  memory.rs  mod.rs  path.rs  s3.rs
crates/icefalldb-core/tests/: catalog_tests.rs  chain_verify_tests.rs  check_tests.rs  checkpoint_archive.rs  commit_delta_tests.rs  commit_fsync_tests.rs  compaction_encoding_tests.rs  compaction_tests.rs  concurrency_tests.rs  database_catalog_tests.rs  doctor_tests.rs  encryption_tests.rs  fault_injection_tests.rs  field_id_tests.rs  gc_tests.rs  iceberg_export_tests.rs  index_tests.rs  manifest_chain_tests.rs  meta_cache_tests.rs  metadata_tests.rs  model_based_tests.rs  mutation_wal_e2e.rs  optimize_tests.rs  partition_tests.rs  reader_tests.rs  s3_tests.rs  storage_tests.rs  time_travel_tests.rs  tsv_tests.rs  wal_fast_commit_fsync.rs  wal_tests.rs  writer_tests.rs
crates/icefalldb-core/tests/common/: mod.rs
crates/icefalldb-core/tests/golden/: generate.rs  read.rs
crates/icefalldb-core/tests/golden/fixtures/mixed_types/: _manifest.json  rg_b4373a10e37c4d7895f34c2f42c2758a.parquet
crates/icefalldb-core/tests/golden/fixtures/mixed_types/_manifests/: 000000001.json
crates/icefalldb-core/tests/golden/fixtures/mixed_types/_schemas/: 000001.json
crates/icefalldb-core/tests/golden/fixtures/multi_commit/: _manifest.json  rg_20360c446d364293ae959821dffacd8a.parquet  rg_6d6fcf15548e496ab3e568f4a26b64d2.parquet  rg_d12a85dcd7c84a47bd16cf18481c98de.parquet
crates/icefalldb-core/tests/golden/fixtures/multi_commit/_manifests/: 000000001.json  000000002.json  000000003.json
crates/icefalldb-core/tests/golden/fixtures/multi_row_group/: rg_666a45fc84564ab89547c8d882f53990.parquet  rg_95b7fe51a9ce4c1daa5cd7d358a52236.parquet
crates/icefalldb-core/tests/golden/fixtures/multi_row_group/_manifests/: 000000001.json
crates/icefalldb-core/tests/golden/fixtures/simple_int/: rg_ca9124fd064b41a1b326fa74f9cae5fd.parquet
crates/icefalldb-query/: Cargo.toml
crates/icefalldb-query-py/: Cargo.toml
crates/icefalldb-query-py/src/: lib.rs
crates/icefalldb-query/examples/: bench_join_plan.rs  bench_native_parquet.rs  bench_pushdown_ab.rs  bench_queries.rs  bench_warm_agg.rs  check_stats.rs
crates/icefalldb-query/src/: bench.rs  catalog.rs  coalesce.rs  encryption.rs  error.rs  index_selector.rs  lib.rs  metadata_cache.rs  mutate.rs  parquet_exec.rs  predicate.rs  provider.rs  result_cache.rs  scalar_codec.rs  scan.rs  session.rs  stats.rs
crates/icefalldb-query/src/execution/: lookup_join.rs  mod.rs  streaming_group_by.rs
crates/icefalldb-query/src/rules/: broadcast_tiny_join.rs  dynamic_filter_pushdown.rs  lookup_join.rs  low_cardinality_group_by.rs  metadata_aggregate.rs  mod.rs  rowid_selection_pushdown.rs  simplify_cast_predicates.rs  sorted_group_by.rs  tiny_build_join.rs
crates/icefalldb-query/tests/: compaction_agg_e2e.rs  correctness_corpus.rs  cross_query_partial_reuse.rs  encryption_e2e.rs  index_query_tests.rs  join_pushdown.rs  lookup_join.rs  lookup_join_rule.rs  min_max_codec_fidelity.rs  partial_aggregate_pushdown.rs  partition_pruning_tests.rs  query_integration.rs  rule_flags.rs  scan_matrix.rs  simplify_cast_predicates_rule.rs  sorted_group_by_rule.rs  split_deletion_correctness.rs  streaming_group_by.rs  warm_agg_fast_path.rs  warm_group_by.rs
crates/icefalldb-server/: Cargo.toml
crates/icefalldb-server/src/: error.rs  lib.rs  main.rs  mutate_handler.rs  server.rs  sql_insert.rs  transaction.rs
crates/icefalldb-server/tests/: server_result_cache.rs  server_startup.rs  server_tests.rs  time_travel_server.rs  transaction_tests.rs
python/: pyproject.toml
python/benchmarks/: README.md  analytical_queries.py  chart.py  compare.py  large_scale.py
python/benchmarks/datafusion/: README.md  bench_cold_cache.py  bench_icefalldb_vs_daemon.py  generate_baseline_doc.py  generate_events.py  oracle.py  run_icefalldb_query_bench.py  run_t0_throughput_bench.py
python/benchmarks/mutations/: compare_3way.py  gate.py  generate.py  open_metrics.json  params.py  run_open_and_scan.py  run_parquet_rewrite.py  run_writes.py  writes_metrics.json
python/benchmarks/perf/: commit_floor.py  daemon_vs_standalone.py  insert_update_cost.py  snapshot_cost.py
python/icefalldb/: __init__.py  adapter.py  producer.py
python/tests/: conftest.py  test_adapter.py  test_datafusion.py  test_datafusion_bench.py  test_encryption.py  test_freshness.py  test_golden.py  test_iceberg_export.py  test_icefalldb_router.py  test_producer.py  test_query_result.py  test_result_cache_handle.py  test_time_travel.py  test_tsv.py
(+13 files in other folders)
