[project]
name = "icefalldb"
version = "0.10.3"
description = "Python adapter for IcefallDB tables via DuckDB"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pyarrow",
    "pytest>=7.0.0",
    "matplotlib>=3.7",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["icefalldb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
